# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.txt  Timer.h  answers.json  config.json  main.cpp  requests.json  search_engine
gtests/: myTests.cpp
include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  Timer.cpp  main.cpp
tests/: CMakeLists.txt  ConverterJSON_test.cpp  GtestTests  InvertedIndex_test.cpp  SearchEngine_test.cpp
